--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <p>Em 1999, a presidência da Escola de Samba Beija-Flor convidou-o a puxar o samba-enredo da escola ao lado de Neguinho da Beija-Flor. No mesmo ano, o disco que lançou com o Soweto, <a href="https://www.youtube.com/watch?v=eNVZqjHUm_Q" target="_blank">“Farol das estrelas”</a>, vendeu um milhão e meio de cópias.</p>
 
-            <p>Em 2000, o conjunto saiu em turnê por Portugal e África, mas logo o cantor deixou o grupo e no mesmo ano, lançou seu primeiro trabalho solo, o CD “Desafio”, pela gravadora EMI. A música "Tua boca" foi tema da novela "O Cravo e a Rosa", da Rede Globo; "Desafio", outro sucesso do disco, destacou-se nas rádios. O disco vendeu mais de um milhão de cópias, ganhando o "Disco de Diamante".</p>
+            <p>Em 2000, o conjunto saiu em turnê por Portugal e África, mas logo o cantor deixou o grupo e no mesmo ano, lançou seu primeiro trabalho solo, o CD “Desafio”, pela gravadora EMI. A música "Tua boca" foi <strong>tema da novela</strong> "O Cravo e a Rosa", da Rede Globo; "Desafio", outro sucesso do disco, destacou-se nas rádios. O disco vendeu mais de um milhão de cópias, ganhando o "Disco de Diamante".</p>
 
             <h2>Vida Pessoal</h2>
 
