--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <p>Mais conhecido pelo seu nome artístico Belo, aqui você encontrará tudo sobre esse belo cantor</p>
     </header>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Fale Conosco</a>
-        <a href="#">Vetores</a>
+        <a href="index.html">Home</a>
+        <a href="fale.html">Fale Conosco</a>
+        <a href="vetor.html">Vetores</a>
         <a href="#">Curiosidades</a>
     </nav>
     <main>
