--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por Matheus, Patrick e Rafael</a></p>
+        <p>Site criado por Matheus C., Patrick P. e Rafael K.</a></p>
     </footer>
 </body>
 </html>
