--- a/vetor.html
+++ b/vetor.html
@@ -21,5 +21,8 @@
     <main>
         
     </main>
+    <footer>
+        <p>Site criado por Matheus C., Patrick P. e Rafael K.</a></p>
+    </footer>
 </body>
 </html>
