--- a/fale.html
+++ b/fale.html
@@ -19,7 +19,11 @@
         <a href="#">Curiosidades</a>
     </nav>
     <main>
+        <form action="fale.php" method="post">
+            login: <input type="text" name="login">
+            <input type="submit" name="botao" value="ENVIAR">
 
+        </form>
     </main>
     <footer>
         <p>Site criado por Matheus C., Patrick P. e Rafael K.</a></p>
