--- a/fale.html
+++ b/fale.html
@@ -20,13 +20,37 @@
     </nav>
     <main>
         <h1>Cadastro</h1>
-        <p>Faça o cadastro e envie sua dúvida: <br></p>
+        <p>Faça o cadastro e envie sua mensagem: <br></p>
         <form action="fale.php" method="post">
             Nome: <input type="text" name="nome" required>
-            Email <input type="email" name="email" required>
-            sexo:<input type=text name=sexo required maxlength=1>
-            altura:<input type=text name=altura required>
-            <input type="submit" name="botao" value="ENVIAR">
+            Email: <input type="email" name="email" required>
+            <br>
+            Celular: <input type="tel" name="cel" placeholder="041 00000 0000">
+            Horario da solicitação: <input type="time" name="hora">
+            <br>
+            Data de Nasc: <input type="date" name="data">
+            Senha: <input type="password" name="password" required>
+            <br>
+            Música Favorita do Belo: <input type="text" name="musica">
+            <br>
+            Sexo:
+            M <input type="radio" name="sexo" value="m">
+            F <input type="radio" name="sexo" value="f">
+            Não Informar <input type="radio" name="sexo" value="naoinf">
+            <br>
+            Estado: <select name="estado">
+                        <option value="PR">PR</option>
+                        <option value="SP">SP</option>
+                        <option value="RJ">RJ</option>
+                        <option value="PB">PB</option>
+                    </select>
+            <br>
+            Mensagem: <br>
+            <textarea name="msg" id="" cols="50" rows="10"></textarea>
+            <br>
+            Nivel de contentamento: 0<input type="range" name="contente" min="1" max="100">100
+            <br>
+            <input style="display: block; margin: auto; font-size: 1.2em;" type="submit" name="botao" value="ENVIAR">
 
         </form>
     </main>
