--- a/curiosidades.html
+++ b/curiosidades.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <title>Vetores</title>
+    <title>Fale Conosco</title>
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
         <a href="curiosidades.html">Curiosidades</a>
     </nav>
     <main>
-        
+        <p>Nas paradas de sucesso há 25 anos, Belo canta samba. No entanto, a origem musical do cantor é outra: o sertanejo!!</p>
     </main>
     <footer>
         <p>Site criado por Matheus C., Patrick P. e Rafael K.</a></p>
