--- a/fale.html
+++ b/fale.html
@@ -16,10 +16,10 @@
         <a href="index.html">Home</a>
         <a href="fale.html">Fale Conosco</a>
         <a href="vetor.html">Vetores</a>
-        <a href="#">Curiosidades</a>
+        <a href="curiosidades.html">Curiosidades</a>
     </nav>
     <main>
-        <h1>Cadastro</h1>
+        <h1>Falo com a gente</h1>
         <p>Faça o cadastro e envie sua mensagem: <br></p>
         <form action="fale.php" method="post">
             Nome: <input type="text" name="nome" required>
@@ -46,7 +46,7 @@
                     </select>
             <br>
             Mensagem: <br>
-            <textarea name="msg" id="" cols="50" rows="10"></textarea>
+            <textarea name="msg" cols="50" rows="10">Sua Mensagem</textarea>
             <br>
             Nivel de contentamento: 0<input type="range" name="contente" min="1" max="100">100
             <br>
