--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="index.html">Home</a>
         <a href="fale.html">Fale Conosco</a>
         <a href="vetor.html">Vetores</a>
-        <a href="#">Curiosidades</a>
+        <a href="curiosidades.html">Curiosidades</a>
     </nav>
     <main>
         <article>
