--- a/fale.html
+++ b/fale.html
@@ -28,12 +28,12 @@
             Celular: <input type="tel" name="cel" placeholder="041 00000 0000">
             Horario da solicitação: <input type="time" name="hora">
             <br>
-            Data de Nasc: <input type="date" name="data">
+            Data da solicitação: <input type="date" name="data">
             Senha: <input type="password" name="password" required>
             <br>
             Música Favorita do Belo: <input type="text" name="musica">
             <br>
-            Sexo:
+            Sexo: <br>
             M <input type="radio" name="sexo" value="m">
             F <input type="radio" name="sexo" value="f">
             Não Informar <input type="radio" name="sexo" value="naoinf">
@@ -44,13 +44,15 @@
                         <option value="RJ">RJ</option>
                         <option value="PB">PB</option>
                     </select>
+            Cidade: <input type="text" name="cidade">
             <br>
             Mensagem: <br>
             <textarea name="msg" cols="50" rows="10">Sua Mensagem</textarea>
             <br>
             Nivel de contentamento: 0<input type="range" name="contente" min="1" max="100">100
-            <br>
-            <input style="display: block; margin: auto; font-size: 1.2em;" type="submit" name="botao" value="ENVIAR">
+            <br> <br>
+            <input style="font-size: 1.1em;" type="reset" value="RESET">
+            <input style="font-size: 1.1em;" type="submit" name="botao" value="ENVIAR">
 
         </form>
     </main>
