--- a/fale.html
+++ b/fale.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <title>Fale Conosco</title>
+    <title>Newsletter</title>
 </head>
 <body>
     <header>
@@ -14,13 +14,13 @@
     </header>
     <nav>
         <a href="index.html">Home</a>
-        <a href="fale.html">Fale Conosco</a>
+        <a href="fale.html">Newsletter</a>
         <a href="vetor.html">Vetores</a>
         <a href="curiosidades.html">Curiosidades</a>
     </nav>
     <main>
-        <h1>Falo com a gente</h1>
-        <p>Faça o cadastro e envie sua mensagem: <br></p>
+        <h1>Faça seu cadastro</h1>
+        <p>Faça o cadastro e receba as novidades mais quentes do nosso cantor favorito! <br></p>
         <form action="fale.php" method="post">
             Nome: <input type="text" name="nome" required>
             Email: <input type="email" name="email" required>
@@ -46,8 +46,7 @@
                     </select>
             Cidade: <input type="text" name="cidade">
             <br>
-            Mensagem: <br>
-            <textarea name="msg" cols="50" rows="10">Sua Mensagem</textarea>
+            Instagram: <input type="text" name="insta" placeholder="@___">
             <br>
             Nivel de contentamento: 0<input type="range" name="contente" min="1" max="100">100
             <br> <br>
