--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <nav>
         <a href="index.html">Home</a>
-        <a href="fale.html">Fale Conosco</a>
+        <a href="fale.html">Newsletter</a>
         <a href="vetor.html">Vetores</a>
         <a href="curiosidades.html">Curiosidades</a>
     </nav>
