--- a/fale.html
+++ b/fale.html
@@ -49,6 +49,8 @@
             Instagram: <input type="text" name="insta" placeholder="@___">
             <br>
             Nivel de contentamento: 0<input type="range" name="contente" min="1" max="100">100
+            <br><br>
+            <textarea name="msg" cols="30" rows="10">Algum comentário?</textarea>
             <br> <br>
             <input style="font-size: 1.1em;" type="reset" value="RESET">
             <input style="font-size: 1.1em;" type="submit" name="botao" value="ENVIAR">
