--- a/vetor.html
+++ b/vetor.html
@@ -14,12 +14,15 @@
     </header>
     <nav>
         <a href="index.html">Home</a>
-        <a href="fale.html">Fale Conosco</a>
+        <a href="fale.html">Newsletter</a>
         <a href="vetor.html">Vetores</a>
         <a href="curiosidades.html">Curiosidades</a>
     </nav>
     <main>
-        
+        <h1>Vetores</h1>
+        <p>Deixando de lado nosso belo cantor, vamos falar um pouco sobre vetores.</p>
+        <h2>O que são?</h2>
+        <p>Na matemática, os vetores são segmentos de reta orientados por uma seta em uma extremidade. Já na programação os vetores são variáveis que armazenam mais de um dado. O que é comumente usado em banco de dados, assim chmanando cada dado conforme a necessidade</p>
     </main>
     <footer>
         <p>Site criado por Matheus C., Patrick P. e Rafael K.</a></p>
