fieldset no sexo

--- a/fale.html
+++ b/fale.html
@@ -33,10 +33,12 @@
             <br>
             Música Favorita do Belo: <input type="text" name="musica">
             <br>
-            Sexo: <br>
-            M <input type="radio" name="sexo" value="m">
-            F <input type="radio" name="sexo" value="f">
-            Não Informar <input type="radio" name="sexo" value="naoinf">
+            <fieldset>
+                <legend>Sexo:</legend>
+                M <input type="radio" name="sexo" value="m">
+                F <input type="radio" name="sexo" value="f">
+                Não Informar <input type="radio" name="sexo" value="naoinf">
+            </fieldset>
             <br>
             Estado: <select name="estado">
                         <option value="PR">PR</option>
