--- a/vetor.html
+++ b/vetor.html
@@ -43,6 +43,8 @@
         <h2>Exercício comentado</h2>
         <p>Faça um algoritimo que preencha um array com o nome de 6 pessoas, em seguida preencha mais dois arrays, um para a idade (18 a 30 aleatório) e outro para o peso (de 50 a 100 alatório) dessas pessoas, calcule e mostre:</p>
         <img src="imagens/print.jfif" alt="print resolvido">
+        <br>
+        <p>Para o exercício <a href="vetor.php">clique aqui</a></p>
     </main>
     <footer>
         <p>Site criado por Matheus C., Patrick P. e Rafael K.</a></p>
